--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/helium/helium-foundation-k8s
+    repoURL: https://github.com/helium/k8s-web
     targetRevision: HEAD
     path: argocd/manifests/cluster
     directory:
