--- a/argocd/manifests/helium/metadata.yaml
+++ b/argocd/manifests/helium/metadata.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: metadata
-          image: 177106435319.dkr.ecr.us-east-1.amazonaws.com/metadata-service:0.0.3
+          image: public.ecr.aws/v0j6k5v6/entity-metadata-service:0.0.1
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8081
@@ -84,7 +84,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: metadata.oracle.test-helium.com
+  - host: metadata.web.test-helium.com
     http:
       paths:
       - path: /
