--- a/argocd/manifests/helium/onboarding-server.yaml
+++ b/argocd/manifests/helium/onboarding-server.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: rds-active-device-oracle-user-access
       containers:
         - name: onboarding-server
-          image: 177106435319.dkr.ecr.us-east-1.amazonaws.com/onboarding-server:0.0.29
+          image: public.ecr.aws/v0j6k5v6/onboarding-server:0.0.1
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3002
@@ -93,7 +93,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: onboarding.oracle.test-helium.com
+  - host: onboarding.web.test-helium.com
     http:
       paths:
       - path: /
