--- a/argocd/manifests/helium/solana-monitor.yaml
+++ b/argocd/manifests/helium/solana-monitor.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: solana-monitor
-          image: 177106435319.dkr.ecr.us-east-1.amazonaws.com/monitor-service:0.0.3
+          image: public.ecr.aws/v0j6k5v6/solana-monitor:0.0.1
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8082
