--- a/argocd/manifests/helium/vsr-metadata.yaml
+++ b/argocd/manifests/helium/vsr-metadata.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: vsr-metadata
-          image: 177106435319.dkr.ecr.us-east-1.amazonaws.com/vsr-metadata-service:0.0.1
+          image: public.ecr.aws/v0j6k5v6/vsr-metadata-service:0.0.1
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8081
@@ -77,7 +77,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: vsr-metadata.oracle.test-helium.com
+  - host: vsr-metadata.web.test-helium.com
     http:
       paths:
       - path: /
