--- a/argocd/manifests/monitoring/grafana/grafana.yaml
+++ b/argocd/manifests/monitoring/grafana/grafana.yaml
@@ -92,7 +92,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: grafana.oracle.test-helium.com
+  - host: grafana.web.test-helium.com
     http:
       paths:
       - path: /
